# sword-ai-systems

./: .env.example  .gitignore  README.md  cli-roadmap.txt  docker-compose.yml  paper1.txt  progress-notes1.txt  pyproject.toml  roadmap1.txt  sword_cli.py
.github/workflows/: ci.yml  load-trend-report.yml
backend/app/: __init__.py  config.py  llm_clients.py  main.py  observability.py  rag_pipeline.py  schemas.py  security.py
data/: .gitkeep
data/fixtures/: core_expectations.txt  grounding_probes.txt  retrieval_baseline.txt  retrieval_probes.txt
docs/: architecture.md  completion-report.md  deployment-topologies.md  load-testing.md  release-checklist.md  release-signoff-2026-05-28.md  research-extensions.md  techstack.md
scripts/: check_load_thresholds.py  eval_retrieval.py  ingest_docs.py  load_test_rate_limit.py  run_completion_checks.py  summarize_load_tests.py  train_mlp_demo.py  train_transformer_demo.py
test/: test_api.py  test_eval_retrieval.py  test_llm_clients.py  test_load_test_rate_limit.py  test_load_trend_tools.py
