[project]
name = "sword-ai-systems"
version = "0.1.0"
description = "AI systems learning and production RAG starter stack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "torch>=2.3.0",
  "transformers>=4.43.0",
  "datasets>=2.20.0",
  "sentence-transformers>=3.0.1",
  "chromadb>=0.5.5",
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "typer>=0.12.3",
  "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.5.5"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "scripts"]
